# thermal

./: .gitignore  CMakeLists.txt  CMakePresets.json  OPTIMIZATION_GUIDE.md  README.md  main.cpp  server.cpp  server.h  test.html
design/: thermal-logo.ai
public/: index.html
public/css/: style.css
src/: main.cpp
src/server/: optimizations.cpp  server.cpp  server.h  server_optimized.h
